# enecad-ia

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: criar_tabelas.py  main.py  models_loader copy.py  models_loader.py  models_loader_conf.py
app/api/v1/: api.py
app/api/v1/endpoints/: modelo.py  solicitacao copy.py  solicitacao.py  solicitacao_conf.py  usuario.py
app/core/: auth.py  configs.py  database.py  deps.py  security.py
app/models/: __all_models.py  arquivo_model.py  modelo_model.py  solicitacao_model.py  usuario_model.py
app/results/: solicitacao_157.json  solicitacao_159.json
app/schemas/: modelo_schema.py  solicitacao_schema.py  usuario_schema.py
